@@ -907,16 +907,15 @@
 	
 
 	<playerList>
+		<!-- In turn order -->
+
+		<player name="Russians" optional="false"/>
 
 		<player name="Japanese" optional="false"/>
 
-		<player name="British" optional="false"/>
-
 		<player name="Germans" optional="false"/>
 
-
-
-		<player name="Russians" optional="false"/>
+		<player name="British" optional="false"/>
 
 	</playerList>
 
