@@ -511,15 +511,13 @@
         </resourceList>
 
         <playerList>
-                <!-- Axis -->
-                <player name="Japanese" optional="false"/>
-                <player name="Germans" optional="false"/>
-		<player name="Chinese" optional="false"/>
-
-                <!-- Allies -->
-                <player name="British" optional="false"/>
-                <player name="Americans" optional="false"/>
+                <!-- In turn order -->
                 <player name="Russians" optional="false"/>
+                <player name="Germans" optional="false"/>
+                <player name="British" optional="false"/>
+                <player name="Japanese" optional="false"/>
+		<player name="Chinese" optional="false"/>
+                <player name="Americans" optional="false"/>
 
                 <!-- German Alliances -->
                 <alliance player="Germans" alliance="German"/>
